--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "dependencies": {
     "bunyan": "^1.8.1",
     "co-busboy": "^1.3.1",
+    "co-mkdirp": "^0.1.0",
     "convict": "^1.3.0",
     "koa": "^1.2.0",
     "koa-body": "^1.4.0",
     "koa-bunyan": "0.0.2",
     "koa-error": "^2.0.0",
     "koa-router": "^5.4.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "mz": "^2.4.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
