--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-bunyan": "0.0.2",
     "koa-error": "^2.0.0",
     "koa-router": "^5.4.0",
+    "koa-slow": "^0.2.0",
     "mkdirp": "^0.5.1",
     "mz": "^2.4.0"
   },
