--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/PuZheng/area-investigation-assets-server#readme",
   "dependencies": {
     "bunyan": "^1.8.1",
+    "bunyan-rotating-file-stream": "^1.5.4",
     "co-busboy": "^1.3.1",
     "co-mkdirp": "^0.1.0",
     "convict": "^1.3.0",
